补充提交相关的文件

--- a/jscore/src/main/cpp/CMakeLists.txt
+++ b/jscore/src/main/cpp/CMakeLists.txt
@@ -6,7 +6,7 @@ set(NATIVERENDER_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
 # 日志打印配置
 add_definitions( "-DLOG_DOMAIN=0xd0d0" )
-add_definitions( "-DLOG_TAG=\"jsvm_demo\"" )
+add_definitions( "-DLOG_TAG=\"jscore\"" )
 
 if(DEFINED PACKAGE_FIND_FILE)
     include(${PACKAGE_FIND_FILE})
