删除一些无效的文件

--- a/entry/oh-package.json5
+++ b/entry/oh-package.json5
@@ -6,7 +6,7 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "@devzeng/jscore": "file:../jscore"
+    "@devzeng/jscore": "^0.1.1"
   }
 }
 
