完善demo和打包脚本

--- a/jscore/src/main/cpp/CMakeLists.txt
+++ b/jscore/src/main/cpp/CMakeLists.txt
@@ -1,6 +1,6 @@
 # the minimum version of CMake.
 cmake_minimum_required(VERSION 3.5.0)
-project(jsvm_demo)
+project(jscore)
 
 set(NATIVERENDER_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -15,5 +15,8 @@ endif()
 include_directories(${NATIVERENDER_ROOT_PATH}
                     ${NATIVERENDER_ROOT_PATH}/include)
 
-add_library(jscore SHARED napi_init.cpp jsvm_utils.cpp)
-target_link_libraries(jscore PUBLIC libace_napi.z.so libjsvm.so libhilog_ndk.z.so)
+set(SELF_LIB_NAME jscore)
+file(GLOB SELF_TEMP_SRC_FILES RELATIVE ${NATIVERENDER_ROOT_PATH} *.cc *.cpp *.h)
+list(APPEND SELF_SRC_FILES ${SELF_TEMP_SRC_FILES})
+add_library(${SELF_LIB_NAME} SHARED ${SELF_SRC_FILES})
+target_link_libraries(${SELF_LIB_NAME} PUBLIC libace_napi.z.so libjsvm.so libhilog_ndk.z.so)
