--- a/jscore/src/main/module.json5
+++ b/jscore/src/main/module.json5
@@ -2,6 +2,7 @@
   "module": {
     "name": "jscore",
     "type": "har",
+    "description": "$string:shared_desc",
     "deviceTypes": [
       "phone",
       "tablet",
